--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -62,6 +62,8 @@
 @import "blocks/widget-header";
 @import "blocks/post-preview";
 
+@import "blocks/footer";
+
 /*** 
 
 ====================================================================
@@ -2935,333 +2937,7 @@ img{
 	font-family: 'Roboto Condensed' ;
 }
 
-/*** 
-
-====================================================================
-	Footer Style
-====================================================================
-
-***/
-
-.main-footer{
-	position:relative;
-	overflow:hidden;
-	background-color:var(--brand-secondary);
-}
-
-.main-footer .footer-widget{
-	position:relative;
-	margin-bottom:40px;
-}
-
-.main-footer .widgets-section{
-	position:relative;
-	padding:90px 0px 50px;
-}
-
-.main-footer .footer-title{
-	position:relative;
-	padding-bottom:15px;
-	margin-bottom:25px;
-}
-
-.main-footer .footer-widget h4{
-	position:relative;
-	font-weight:700;
-	/* color:#ffffff; */
-	line-height:1.2em;
-	text-transform:capitalize;
-}
-
-.main-footer .footer-title:before{
-	position:absolute;
-	content:'';
-	left:0px;
-	bottom:0px;
-	height:1px;
-	width:40px;
-	background-color:var(--brand-primary);
-}
-
-.main-footer .contact-list{
-	position:relative;
-}
-
-.main-footer .contact-list li{
-	position:relative;
-	color:#ececec;
-	font-size:14px;
-	margin-bottom:8px;
-	padding-left:25px;
-}
-
-.main-footer li .icon{
-	width: 18px;
-	position:absolute;
-	left:0;
-	bottom: 50%;
-	margin-bottom: -7px;
-	text-align: center;
-	color:var(--brand-primary);
-}
-
-.main-footer .contact-list li a{
-	position:relative;
-	color:#ececec;
-	/* -webkit-transition:all 300ms ease; */
-	/* -ms-transition:all 300ms ease; */
-	/* -o-transition:all 300ms ease; */
-	/* -moz-transition:all 300ms ease; */
-	/* transition:all 300ms ease; */
-}
-
-.main-footer .contact-list li a:hover{
-	color:var(--brand-primary);
-}
-
-/* Nav List */
-
-.main-footer .nav-list{
-	position:relative;
-}
-
-.main-footer .nav-list li{
-	position:relative;
-	margin-bottom:6px;
-}
-
-.main-footer .nav-list li::marker{
-	font-size: inherit;
-}
-
-/* .main-footer .nav-list li:before{
-	display: block;
-	position:absolute;
-	content: "\f107";
-	left:0px;
-	top:1px;
-	color:var(--brand-primary);
-	width: 1rem;
-	height: 1rem;
-	background-image: url('/images/icons/check-mark.svg');
-	font-family: "Flaticon"; 
-} */
-
-.main-footer .nav-list li a{
-	position:relative;
-	color:#ffffff;
-	font-size:14px;
-	/* -webkit-transition:all 300ms ease; */
-	/* -ms-transition:all 300ms ease; */
-	/* -o-transition:all 300ms ease; */
-	/* -moz-transition:all 300ms ease; */
-	/* transition:all 300ms ease; */
-}
-
-.main-footer .nav-list li a:hover{
-	color:var(--brand-primary);
-}
-
-/* Recent Posts */
-
-.main-footer .news-widget .post{
-	position: relative;
-	min-height: 70px;
-	padding-left: 75px;
-	margin-bottom: 15px;
-	padding-right:90px;
-}
-
-.main-footer .news-widget .post:last-child{
-	margin-bottom: 0;
-}
-
-.main-footer .news-widget .post .thumb{
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 75px;
-	width: 70px;
-	overflow: hidden;
-}
-
-.main-footer .news-widget .post .thumb a{
-	display: block;
-}
-
-.main-footer .news-widget .post .thumb img{
-	display: block;
-	width: 55px;
-	height: auto;
-}
-
-.main-footer .news-widget .post h4{
-	position: relative;
-	font-size: 16px;
-	color: #ececec;
-	line-height: 30px;
-	font-weight: 400;
-	top: -5px;
-	line-height:1.7em;
-}
-
-.main-footer .news-widget .post h4 a{
-	color:#ececec;
-	/* -webkit-transition: all 300ms ease; */
-	/* -moz-transition: all 300ms ease; */
-	/* -ms-transition: all 300ms ease; */
-	/* -o-transition: all 300ms ease; */
-	/* transition: all 300ms ease; */
-}
-
-.main-footer .news-widget .post h4 a:hover{
-	color: var(--brand-primary);
-}
-
-.main-footer .news-widget .social-box{
-	position:absolute;
-	right:0px;
-	bottom:0px;
-}
-
-.main-footer .news-widget .social-box li{
-	position:relative;
-	margin-top:18px;
-}
-
-.main-footer .news-widget .social-box li a{
-	position:relative;
-	color:#ffffff;
-	font-size:16px;
-	/* -webkit-transition: all 300ms ease; */
-	/* -moz-transition: all 300ms ease; */
-	/* -ms-transition: all 300ms ease; */
-	/* -o-transition: all 300ms ease; */
-	/* transition: all 300ms ease; */
-}
-
-.main-footer .news-widget .social-box li a:hover{
-	color:var(--brand-primary);
-}
-
-.main-footer .pattern-layer{
-	position:absolute;
-	left:0px;
-	top:0px;
-	right:0px;
-	bottom:0px;
-	background-repeat:no-repeat;
-}
-
-.main-footer .pattern-layer-two{
-	position:absolute;
-	left:0px;
-	top:0px;
-	right:0px;
-	bottom:0px;
-	background-repeat:no-repeat;
-}
-
-/* Footer Bottom */
-
-.main-footer .footer-bottom{
-	position:relative;
-	padding:20px 0px;
-	border-top:1px solid rgba(255,255,255,0.10);
-}
-
-.main-footer .footer-bottom .copyright{
-	position:relative;
-	color:#ffffff;
-	margin-top:2px;
-}
-
-.main-footer .footer-bottom .copyright a{
-	color:#ffaa00;
-}
-
-.main-footer .footer-bottom .language-column{
-	position:relative;
-	text-align:right;
-}
-
-/*Language Dropdown*/
-
-.main-footer .footer-bottom .language{
-	position:relative;
-	line-height:1em;
-	margin-left: 20px;
-	display:inline-block;
-}
-
-.main-footer .footer-bottom .language .flag-icon{
-	margin-right:8px;
-}
-
-.main-footer .footer-bottom .language .dropdown-menu{
-	top:100%;
-	right:0px;
-	left:auto;
-	width:170px;	
-	border-radius:0px;
-	margin-top:0px;
-	background-color:var(--brand-secondary);
-	border:none;
-	padding:0px;
-    border-top:3px solid var(--brand-primary);
-}
-
-.main-footer .footer-bottom .language > a{
-	color:#ffffff;
-	padding:0px;
-	text-transform:capitalize;
-	display:inline-block;
-    border:0px;
-	font-weight:400;
-	font-size:15px;
-	line-height:1em;
-	border-radius: 0px;
-}
-
-.main-footer .footer-bottom .language > a:after{
-	display:none;
-}
-
-.main-footer .footer-bottom language a:hover{
-	background:none;
-}
-
-.main-footer .footer-bottom .language .dropdown-menu > li{
-	padding-right:0px !important;
-	margin:0px !important;
-	float:none;
-	display:block !important;
-    border-bottom: 1px solid rgba(255,255,255,0.20);
-}
-
-.main-footer .footer-bottom .language .dropdown-menu > li:last-child{
-	border-bottom:none;	
-}
-
-.main-footer .footer-bottom .language .dropdown-menu > li > a{
-	padding:14px 20px !important;
-	color:#ffffff;
-	display: block;
-	text-align:left;
-	font-size: 14px;
-	/* -webkit-transition:all 300ms ease; */
-	/* -ms-transition:all 300ms ease; */
-	/* -o-transition:all 300ms ease; */
-	/* -moz-transition:all 300ms ease; */
-	/* transition:all 300ms ease; */
-}
-
-.main-footer .footer-bottom .language .dropdown-menu > li > a:hover{
-	color:#ffffff !important;
-	background-color:var(--brand-primary);
-}
-
-/*** 
+/***
 
 ====================================================================
 	Main Slider Banner
