--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -61,6 +61,7 @@
 @import "blocks/hero-code";
 @import "blocks/widget-header";
 @import "blocks/post-preview";
+@import "blocks/steps-form";
 
 @import "blocks/footer";
 
