--- a/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
@@ -1,26 +1,80 @@
 {{ $seed := "foo" }}
 {{ $random := delimit (shuffle (split (md5 $seed) "" )) "" }}
-{{ $random }}
-<form name="cloud-request" method="POST" id="{{ $random }}" novalidate>
+<!--suppress XmlDuplicatedId -->
+<div class="steps-form row">
+<div class="spinner-border" role="status" style="width: 5rem; height: 5rem;">
+    <span class="sr-only">Loading...</span>
+</div>
+<form class="steps-form__form owl-carousel col-6" name="cloud-request" method="POST" id="{{ $random }}" novalidate>
     {{ range .Params.Form }}
-    <div class="form-group" data-step="{{ .id }}" style="display: none;">
-        <label for="{{ .id }}{{ .name }}">{{ .label }}</label>
+    <div class="form-group" data-step="{{ .id }}">
+        <label class="steps-form__label" for="{{ .id }}{{ .name }}">{{ .label }}</label>
+        {{ if eq .type "hz" }}
+        <select class="steps-form__input custom-select" id="{{ .id }}{{ .name }}" name="{{ .name }}">
+            <option selected>Open this select menu</option>
+            {{ range .options }}
+            <option value="{{ . }}">{{ . }}</option>
+            {{ end }}
+        </select>
+        {{ else if eq .type "select"}}
+            {{ $input := . }}
+            {{ range .options }}
+            <div class="form-check">
+                <label class="steps-form__label">
+                    <input class="steps-form__input form-check-input" type="radio" name="{{ $input.name }}" id="{{ $input.id }}{{ $input.name }}"
+                           value="{{ . }}">
+                    {{ . }}
+                </label>
+            </div>
+            {{ end }}
+        {{ else if eq .type "text"}}
+        <textarea class="form-control steps-form__input" id="{{ .id }}{{ .name }}" name="{{ .name }}"
+                  rows="1" placeholder="{{ .placeholder }}">
+        </textarea>
+        {{ else }}
         <input type="{{ .type }}" name="{{ .name }}"
-               class="form-control" id="{{ .id }}{{ .name }}"
-               {{ if .required }}required{{ end }}>
+               class="steps-form__input form-control" id="{{ .id }}{{ .name }}"
+               {{ if .required }}required{{ end }} placeholder="{{ .placeholder }}">
         <div class="invalid-feedback">
             Please provide a valid {{ .type }}.
         </div>
+    {{ end }}
     </div>
     {{ end }}
-    <button id="next">Next</button>
-    <button id="prev">Prev</button>
-    <button type="submit" class="btn btn-primary">Submit</button>
+
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
 </form>
+</div>
+
 <script>
   // Example starter JavaScript for disabling form submissions if there are invalid fields
   (function() {
     'use strict';
+
+    /* ==============================
+         Wait until an element is ready
+         */
+    function waitForElm(selector) {
+      return new Promise(resolve => {
+        if (document.querySelector(selector)) {
+          return resolve(document.querySelector(selector));
+        }
+
+        const observer = new MutationObserver(mutations => {
+          if (document.querySelector(selector)) {
+            resolve(document.querySelector(selector));
+            observer.disconnect();
+          }
+        });
+
+        observer.observe(document.body, {
+          childList: true,
+          subtree: true
+        });
+      });
+    }
     window.addEventListener('load', function() {
       // Fetch all the forms we want to apply custom Bootstrap validation styles to
       var form = document.getElementById({{ $random }});
@@ -33,11 +87,19 @@
         form.classList.add('was-validated');
       });
 
-      const steps = $(form).find('[data-step]');
-      $.each(steps, (k,v) => {
-        $(steps[0]).show();
+      $(".owl-carousel").owlCarousel({
+        items: 1,
+        mouseDrag: false,
+        touchDrag: false,
+        nav: true,
+        rewind: false,
+        slideTransition: 'easy',
+        loop: false,
+        margin: 5,
+        onInitialized: () => {
+          document.getElementsByClassName('spinner-border')[0].remove();
+        }
       });
-      console.log(steps)
     }, false);
   })();
 
