--- a/qdrant-landing/themes/qdrant/static/css/blocks/steps-form.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/steps-form.scss
@@ -44,6 +44,11 @@
     display: flex;
     align-items: center;
   }
+
+  .owl-nav {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 
