--- a/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
@@ -9,24 +9,37 @@
     {{ range .Params.Form }}
     <div class="form-group" data-step="{{ .id }}">
         <label class="steps-form__label" for="{{ .id }}{{ .name }}">{{ .label }}</label>
-        {{ if eq .type "hz" }}
+        {{ if eq .type "select" }}
         <select class="steps-form__input custom-select" id="{{ .id }}{{ .name }}" name="{{ .name }}">
             <option selected>Open this select menu</option>
             {{ range .options }}
             <option value="{{ . }}">{{ . }}</option>
             {{ end }}
         </select>
-        {{ else if eq .type "select"}}
+        {{ else if eq .type "radio"}}
             {{ $input := . }}
             {{ range .options }}
             <div class="form-check">
                 <label class="steps-form__label">
-                    <input class="steps-form__input form-check-input" type="radio" name="{{ $input.name }}" id="{{ $input.id }}{{ $input.name }}"
+                    <input class="steps-form__input form-check-input" type="{{ $input.type }}" name="{{ $input.name }}" id="{{ $input.id }}{{ $input.name }}"
                            value="{{ . }}">
                     {{ . }}
                 </label>
             </div>
             {{ end }}
+
+        {{ else if eq .type "checkbox"}}
+        {{ $input := . }}
+        {{ range .options }}
+        <div class="form-check">
+            <label class="steps-form__label">
+                <input class="steps-form__input form-check-input" type="{{ $input.type }}" name="{{ $input.name }}" id="{{ $input.id }}{{ $input.name }}"
+                       value="{{ . }}">
+                {{ . }}
+            </label>
+        </div>
+        {{ end }}
+
         {{ else if eq .type "text"}}
         <textarea class="form-control steps-form__input" id="{{ .id }}{{ .name }}" name="{{ .name }}"
                   rows="1" placeholder="{{ .placeholder }}">
@@ -43,7 +56,8 @@
     {{ end }}
 
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <p class="steps-form__label">Ta-da! We'll happily be in touch with you very soon! 🥳</p>
+        <button type="submit" class="theme-btn btn-style-three">Submit</button>
     </div>
 </form>
 </div>
@@ -95,7 +109,9 @@
         rewind: false,
         slideTransition: 'easy',
         loop: false,
-        margin: 5,
+        margin: 10,
+        stagePadding: 5,
+        navText: ['<div class="theme-btn btn-style-three"><i class="fas fa-chevron-left"></i> Back</div>', '<div class="theme-btn btn-style-three">Next question <i class="fas fa-chevron-right"></i></div>'],
         onInitialized: () => {
           document.getElementsByClassName('spinner-border')[0].remove();
         }
