--- a/qdrant-landing/themes/qdrant/layouts/cloud-form/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/cloud-form/list.html
@@ -5,7 +5,7 @@
   }
 </style>
 
-<section class="container-fluid clearfix pt-3 pt-md-5">
+<section class="container-fluid clearfix pt-lg-3 pt-lg-5">
     <!-- Content Side -->
     {{ partial "steps-form" . }}
 </section>
